[package]
name = "arrctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitfield = "0.14.0"
clap = { version = "4.4.5", features = ["derive"] }
libc = "0.2.148"
msru = "0.2.0"
raw-cpuid = "11.0.1"
